2005-10-10  Jackson Harper  <jackson@ximian.com>

	* ResourceListBox.cs: Don't crash on click if there are no
	items selected.

2005-10-09  Alexander Olk  <alex.olk@googlemail.com>

	* Makefile: Updated
	* AboutDialog.cs: Use a Control instead of a Panel
	* ColorPanel.cs, ImagePanel.cs, TextPanel.cs: Added IPanel interface
	* IResource.cs: Removed interface IClonable, added Value
	* MainForm.cs: 
	  - Added second Splitter
	  - Added ResourceTreeView
	  - Exit if there are no resources
	  - New resources are now created with System.Activator.CreateInstance
	  - Fix for copy and paste
	* ResourceBase.cs: Removed IClonable interface
	* ResourceByteArray.cs, ResourceColor.cs, ResourceCursor.cs, ResourceIcon.cs,
	  ResourceImage.cs, ResourceString.cs: Added Value property
	* ResourceListBox.cs: Updated to handle more than one ListBox.ObjectCollection
	* IPanel.cs, ResourceTreeNode.cs, ResourceTreeView.cs: Added
	* ResourceType.cs: Added All and None types

2005-10-06  Alexander Olk  <alex.olk@googlemail.com>

	* AboutDialog.cs, ByteArrayPanel.cs, ImagePanel.cs, MainForm.cs,
	  ResourceBase.cs, ResourceByteArray.cs, ResourceColor.cs, ResourceCursor.cs,
	  ResourceIcon.cs, ResourceImage.cs, ResourceListBox.cs, ResourceString.cs,
	  TextPanel.cs:
	  - Use "Dispose" or "using" for graphics objects wherever it is possible
	  - Disable TextBox ScrollBars until they are fixed
	  - Reduce number of shown bytes in ByteArrayPanel to 1024
	  - Draw Button in ImagePanel after PictureBox
	  - Give a little hint in the titlebar if a file isn't saved
	  - On exit ask if an unsaved file should be saved
	  - During runtime FileDialog remembers the recently used path now and doesn't
	    delete the currently used resources if you press cancel in OpenFileDialog 
	  - Moved some code from the ResourceXXX classes to ResourceBase
	  - Use Image.GetThumbnailImage to get a thumbnail for an image or an icon
	  - Keep aspect ratio in thumbnails
