@@ -37,6 +37,30 @@ namespace MWFResourceEditor
 			Nodes.Add( bytearray );
 		}
 		
+		public void RemoveResource( IResource resource )
+		{
+			int counter = 0;
+			
+			BeginUpdate( );
+			foreach ( ResourceTreeNode pnode in Nodes )
+			{
+				ResourceTreeNode to_delete = null;
+				to_delete = GetNode( resource.ResourceName, pnode );
+				
+				if ( to_delete != null )
+				{
+					Console.WriteLine( "Found the node and removing the node from parentNodes.Nodes..." );
+					Console.WriteLine( "Well, this is a FIXME" );
+					pnode.Nodes.Remove( to_delete );
+					counter++;
+				}
+				
+				if ( counter == 2 )
+					break;
+			}
+			EndUpdate( );
+		}
+		
 		public void ShowItem( IResource iResource, ResourceType showType )
 		{
 			ResourceTreeNode to_select = null;
@@ -44,25 +68,25 @@ namespace MWFResourceEditor
 			switch ( showType )
 			{
 				case ResourceType.All:
-					to_select = GetNodeIndex( iResource.ResourceName, all );
+					to_select = GetNode( iResource.ResourceName, all );
 					break;
 				case ResourceType.TypeImage:
-					to_select = GetNodeIndex( iResource.ResourceName, image );
+					to_select = GetNode( iResource.ResourceName, image );
 					break;
 				case ResourceType.TypeString:
-					to_select = GetNodeIndex( iResource.ResourceName, tstring );
+					to_select = GetNode( iResource.ResourceName, tstring );
 					break;
 				case ResourceType.TypeIcon:
-					to_select = GetNodeIndex( iResource.ResourceName, icon );
+					to_select = GetNode( iResource.ResourceName, icon );
 					break;
 				case ResourceType.TypeColor:
-					to_select = GetNodeIndex( iResource.ResourceName, color );
+					to_select = GetNode( iResource.ResourceName, color );
 					break;
 				case ResourceType.TypeCursor:
-					to_select = GetNodeIndex( iResource.ResourceName, cursor );
+					to_select = GetNode( iResource.ResourceName, cursor );
 					break;
 				case ResourceType.TypeByteArray:
-					to_select = GetNodeIndex( iResource.ResourceName, bytearray );
+					to_select = GetNode( iResource.ResourceName, bytearray );
 					break;
 				default:
 					break;
@@ -78,65 +102,61 @@ namespace MWFResourceEditor
 			}
 		}
 		
-		private ResourceTreeNode GetNodeIndex( string name, ResourceTreeNode node )
+		private ResourceTreeNode GetNode( string name, ResourceTreeNode node )
 		{
-			ResourceTreeNode tnode = null;
+			foreach ( ResourceTreeNode rnode in node.Nodes )
+				if ( name == rnode.Text )
+					return rnode;
 			
-			for ( int i = 0; i < node.Nodes.Count; i++ )
-			{
-				if ( name == node.Nodes[ i ].Text )
-				{
-					tnode = node.Nodes[ i ] as ResourceTreeNode;
-					break;
-				}
-			}
-			
-			return tnode;
+			return null;
 		}
 		
 		public void Fill( )
 		{
-			Clear( );
+			ClearResources( );
 			
 			BeginUpdate( );
 			
 			foreach ( IResource resource in resourceListBox.AllItems )
-			{
-				switch ( resource.ResourceType )
-				{
-					case ResourceType.TypeImage:
-						image.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeImage, ResourceType.None ) );
-						all.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeImage, ResourceType.None ) );
-						break;
-					case ResourceType.TypeByteArray:
-						bytearray.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeByteArray, ResourceType.None ) );
-						all.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeByteArray, ResourceType.None ) );
-						break;
-					case ResourceType.TypeString:
-						tstring.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeString, ResourceType.None ) );
-						all.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeString, ResourceType.None ) );
-						break;
-					case ResourceType.TypeColor:
-						color.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeColor, ResourceType.None ) );
-						all.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeColor, ResourceType.None ) );
-						break;
-					case ResourceType.TypeCursor:
-						cursor.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeCursor, ResourceType.None ) );
-						all.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeCursor, ResourceType.None ) );
-						break;
-					case ResourceType.TypeIcon:
-						icon.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeIcon, ResourceType.None ) );
-						all.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeIcon, ResourceType.None ) );
-						break;
-					default:
-						break;
-				}
-			}
+				AddToNode( resource );
 			
 			EndUpdate( );
 		}
 		
-		public void Clear( )
+		private void AddToNode( IResource resource )
+		{
+			switch ( resource.ResourceType )
+			{
+				case ResourceType.TypeImage:
+					image.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeImage, ResourceType.None ) );
+					all.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeImage, ResourceType.None ) );
+					break;
+				case ResourceType.TypeByteArray:
+					bytearray.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeByteArray, ResourceType.None ) );
+					all.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeByteArray, ResourceType.None ) );
+					break;
+				case ResourceType.TypeString:
+					tstring.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeString, ResourceType.None ) );
+					all.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeString, ResourceType.None ) );
+					break;
+				case ResourceType.TypeColor:
+					color.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeColor, ResourceType.None ) );
+					all.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeColor, ResourceType.None ) );
+					break;
+				case ResourceType.TypeCursor:
+					cursor.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeCursor, ResourceType.None ) );
+					all.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeCursor, ResourceType.None ) );
+					break;
+				case ResourceType.TypeIcon:
+					icon.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeIcon, ResourceType.None ) );
+					all.Nodes.Add( new ResourceTreeNode( resource.ResourceName, ResourceType.TypeIcon, ResourceType.None ) );
+					break;
+				default:
+					break;
+			}
+		}
+		
+		public void ClearResources( )
 		{
 			BeginUpdate( );
 			all.Nodes.Clear( );
@@ -146,6 +166,13 @@ namespace MWFResourceEditor
 			color.Nodes.Clear( );
 			cursor.Nodes.Clear( );
 			bytearray.Nodes.Clear( );
+			EndUpdate( );
+		}
+		
+		public void AddResourceDirect( IResource resource )
+		{
+			BeginUpdate( );
+			AddToNode( resource );
 			EndUpdate( );
 		}
 		
